--- a/app/globals.css
+++ b/app/globals.css
@@ -1,14 +1,21 @@
 @import "tailwindcss";
 
+/* Use class-based dark mode with Tailwind v4 */
+@custom-variant dark (&&:where(.dark, .dark *));
+
 *,
 *::before,
 *::after {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
 }
 
-body {
-  background-color: #f0f0f0;
-  font-family: Arial, Helvetica, sans-serif;
+html,
+body,
+#root,
+.app {
+  height: 100%;
+  width: 100%;
+  @apply text-sm;
+  @apply bg-white;
+  @apply dark:bg-black;
 }
